# dockyard

./: .gitignore  AGENT-RUST-GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  improvements.txt  layout_diagram.md  task_progress.md
.github/workflows/: ci.yml
src/: README.md  app.rs  config.rs  main.rs  types.rs
src/docker/: client.rs  containers.rs  exec.rs  health.rs  images.rs  logs.rs  mod.rs  stats.rs
src/events/: handler.rs  key_bindings.rs  mod.rs
src/ui/: container_details.rs  container_list.rs  help.rs  image_details.rs  image_list.rs  layout.rs  logs.rs  mod.rs
