[package]
name = "dockyard"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Dockyard - A high-performance Docker container monitor with a beautiful TUI"
license = "MIT"
keywords = ["docker", "tui", "container", "monitor", "dockyard"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Docker API client
bollard = "0.17"

# Date/time handling
chrono = "0.4"

# Error handling
anyhow = "1.0"

# Async utilities
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1