[package]
name = "dockyard"
version = "0.3.0"
edition = "2021"
authors = ["Timur Gabaidulin <timur.gab@gmail.com>"]
description = "Dockyard - A high-performance Docker container manager with a beautiful TUI"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
keywords = ["docker", "tui", "container", "monitor", "dockyard"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Docker API client
bollard = "0.17"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Async utilities
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

# Configuration
config = "0.14"
directories = "5.0"
toml = "0.8"

# System info (for performance metrics)
sysinfo = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
